--- a/local/templates/furniture_pale-blue/components/bitrix/news/customize_nfk/bitrix/news.detail/.default/style.css
+++ b/local/templates/furniture_pale-blue/components/bitrix/news/customize_nfk/bitrix/news.detail/.default/style.css
@@ -1,9 +1,19 @@
-div.news-detail img.detail_picture
-{
-	float:left;
-	margin:0 8px 6px 1px;
+.blog-detail,
+.blog-detail-img,
+.blog-detail-text {
+	width: 100%;
 }
-.news-date-time
-{
-	color:#486DAA;
+.blog-detail-img img {
+	width: 100%;
+	height: auto;
+}
+.blog-detail-img,
+.blog-info {
+	margin-bottom: 1rem;
+}
+.blog-info {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
