--- a/local/templates/furniture_pale-blue/components/bitrix/news/customize_nfk/bitrix/news.detail/.default/style.css
+++ b/local/templates/furniture_pale-blue/components/bitrix/news/customize_nfk/bitrix/news.detail/.default/style.css
@@ -17,3 +17,18 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 }
+.blog_add-button {
+	background-color: #68BEC1;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin-bottom: 5px;
+	cursor: pointer;
+}
+.blog_add-button:hover {
+	background-color: #47A7AA;
+}
